@@ -2,6 +2,7 @@ icondir = $(datadir)/icons/hicolor/22x22/apps
 icon_DATA =					\
 	empathy.png				\
 	empathy-new-message.png			\
+	empathy-group-message.png		\
 	empathy-proto-ekiga.png			\
 	empathy-proto-google-talk.png		\
 	empathy-proto-msn.png			\
